# qa_guru_python_5_19

./: pyproject.toml  tests_api.py
